--- a/css/styles.scss
+++ b/css/styles.scss
@@ -210,7 +210,7 @@ body {
     margin-top: 0.5rem;
     border-spacing: 0px 0px;
     border: 3px solid black;
-    
+
     tr td {
       font-family: $item-font-stack;
       font-size: 1.2rem;
@@ -262,7 +262,7 @@ body {
 }
 
 .category {
-  width: 100%;
+  width: 50%;
   margin: 3rem auto 0 auto;
   border-spacing: 3rem 2rem;
 
@@ -330,9 +330,13 @@ footer {
   }
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1000px) {
   :root {
     font-size: 15px;
+  }
+
+  .category {
+    width: 75%;
   }
 }
 
